[package]
name = "rusty-wrenalyzer"
version = "0.1.0"
authors = ["Ronja <git@ronja.space>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "^7.1.0"
nom-supreme = "^0.6.0"
nom_locate = "^4.0.0"
derive_more = "0.99.17"
flatdebug = { path = "flatdebug-derive" }